@@ -4,6 +4,7 @@ This file documents the major additions and syntax changes between releases.
 	ENHANCEMENTS
 	check_ide_smart now defaults to plugin output, original output appended with -v
 	Extra-Opts are now enabled by default
+	check_swap now supports a configurable state when there is no swap
 
 	FIXES
 	Don't let e.g. check_http's -C option reset SSL version if e.g. -S 1 -C 5 is specified
@@ -20,6 +21,8 @@ This file documents the major additions and syntax changes between releases.
 	  been disabled because they were broken
 	State retention: the NAGIOS_PLUGIN_STATE_DIRECTORY environment variable has been
 	  renamed MP_STATE_DIRECTORY. The old variable will continue to work in v1.6.x
+	check_swap used to allow returning OK on a system without swap when only percent thresholds
+	  were used. This is no longer the case and one must now use -n/--no-swap=<state>
 
 1.5 2nd October 2013
 	ENHANCEMENTS
